// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> can be presented as one of the allowed variants 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  background-color: #fff;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  variant="white"
>
  <Styled(Component)
    horizontal={4}
    variant="white"
    vertical={5}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      horizontal={4}
      variant="white"
      vertical={5}
    >
      <Component
        className="c0"
        horizontal={4}
        variant="white"
        vertical={5}
      >
        <Box
          className="c0"
          horizontal={4}
          inline={false}
          tag="div"
          vertical={5}
        >
          <styled.div
            className="c0"
            horizontal={4}
            inline={false}
            tag="div"
            vertical={5}
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              horizontal={4}
              inline={false}
              tag="div"
              vertical={5}
            >
              <div
                className="c0 sc-bwzfXH c0 c1"
              >
                Some content
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 2`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  background-color: #fff;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  variant="white"
>
  <Styled(Component)
    horizontal={4}
    variant="white"
    vertical={5}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      horizontal={4}
      variant="white"
      vertical={5}
    >
      <Component
        className="c0"
        horizontal={4}
        variant="white"
        vertical={5}
      >
        <Box
          className="c0"
          horizontal={4}
          inline={false}
          tag="div"
          vertical={5}
        >
          <styled.div
            className="c0"
            horizontal={4}
            inline={false}
            tag="div"
            vertical={5}
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              horizontal={4}
              inline={false}
              tag="div"
              vertical={5}
            >
              <div
                className="c0 sc-bwzfXH c0 c1"
              >
                Some content
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 3`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  background-color: #f2eff4;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  variant="lavender"
>
  <Styled(Component)
    horizontal={4}
    variant="lavender"
    vertical={5}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      horizontal={4}
      variant="lavender"
      vertical={5}
    >
      <Component
        className="c0"
        horizontal={4}
        variant="lavender"
        vertical={5}
      >
        <Box
          className="c0"
          horizontal={4}
          inline={false}
          tag="div"
          vertical={5}
        >
          <styled.div
            className="c0"
            horizontal={4}
            inline={false}
            tag="div"
            vertical={5}
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              horizontal={4}
              inline={false}
              tag="div"
              vertical={5}
            >
              <div
                className="c0 sc-bwzfXH c0 c1"
              >
                Some content
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 4`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  background-color: #f7f7f8;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  variant="grey"
>
  <Styled(Component)
    horizontal={4}
    variant="grey"
    vertical={5}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      horizontal={4}
      variant="grey"
      vertical={5}
    >
      <Component
        className="c0"
        horizontal={4}
        variant="grey"
        vertical={5}
      >
        <Box
          className="c0"
          horizontal={4}
          inline={false}
          tag="div"
          vertical={5}
        >
          <styled.div
            className="c0"
            horizontal={4}
            inline={false}
            tag="div"
            vertical={5}
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              horizontal={4}
              inline={false}
              tag="div"
              vertical={5}
            >
              <div
                className="c0 sc-bwzfXH c0 c1"
              >
                Some content
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> renders 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  background-color: #fff;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  Children
</div>
`;
